# voice-hybrid-eval

./: .gitignore  CLAUDE.md  README.md  env.example  environment.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
doc/: implementation-plan.md
scenarios/: billing_refund.yaml  cancel_order.yaml  change_shipping_address.yaml  check_order_status.yaml  duplicate_charge_refund.yaml  missing_package.yaml  order_return.yaml  order_return_variations.yaml  reset_password.yaml  return_damaged_item.yaml  shipping_address.yaml  upgrade_subscription.yaml
tests/: test_bot_brain.py  test_bot_tools.py  test_cli.py  test_evaluator_claude.py  test_evaluator_rules.py  test_markdown_report.py  test_scenario.py  test_simulator.py
voice_eval/: __init__.py  bot_brain.py  bot_tools.py  cli.py  evaluator_claude.py  evaluator_llm.py  evaluator_rules.py  mcp_client.py  mcp_tools.py  scenario.py  simulator.py  tool_client.py
voice_eval/audio/: __init__.py  asr.py  tts.py
voice_eval/reporters/: __init__.py  markdown.py
